backport fix for flickering subtitles
Simple CSS fix from `libjass` v0.11

Fixes #3

--- a/src/videojs.ass.css
+++ b/src/videojs.ass.css
@@ -20,3 +20,9 @@
 .vjs-default-skin .vjs-ass-button.inactive {
   color: grey;
 }
+
+/* Backport from libjass v0.11 */
+.libjass-subs, .libjass-subs * {
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
